plugins/fr.inria.atlanmod.api2mol.concreteSyntax/files/gen/api2molParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 api2mol.g 2010-06-24 14:24:27

	import gts.modernization.model.CST.impl.*;
	import gts.modernization.model.CST.*;
	import java.util.Iterator;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
import org.antlr.stringtemplate.*;
import org.antlr.stringtemplate.language.*;
import java.util.HashMap;
public class api2molParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AT", "CONTEXT", "COMMA", "SEMI", "DEFAULT_METACLASS", "ID", "LPAREN", "RPAREN", "ENUM", "COLON", "LCURLY", "RCURLY", "DOT", "NEW", "MULTIPLE", "SLASH", "COMMENT", "LINE_COMMENT", "WS"
    };
    public static final int LINE_COMMENT=21;
    public static final int NEW=17;
    public static final int DEFAULT_METACLASS=8;
    public static final int LCURLY=14;
    public static final int ID=9;
    public static final int EOF=-1;
    public static final int SEMI=7;
    public static final int CONTEXT=5;
    public static final int LPAREN=10;
    public static final int MULTIPLE=18;
    public static final int AT=4;
    public static final int COLON=13;
    public static final int RPAREN=11;
    public static final int WS=22;
    public static final int SLASH=19;
    public static final int ENUM=12;
    public static final int COMMA=6;
    public static final int RCURLY=15;
    public static final int COMMENT=20;
    public static final int DOT=16;

    // delegates
    // delegators


        public api2molParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public api2molParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected StringTemplateGroup templateLib =
      new StringTemplateGroup("api2molParserTemplates", AngleBracketTemplateLexer.class);

    public void setTemplateLib(StringTemplateGroup templateLib) {
      this.templateLib = templateLib;
    }
    public StringTemplateGroup getTemplateLib() {
      return templateLib;
    }
    /** allows convenient multi-value initialization:
     *  "new STAttrMap().put(...).put(...)"
     */
    public static class STAttrMap extends HashMap {
      public STAttrMap put(String attrName, Object value) {
        super.put(attrName, value);
        return this;
      }
      public STAttrMap put(String attrName, int value) {
        super.put(attrName, new Integer(value));
        return this;
      }
    }

    public String[] getTokenNames() { return api2molParser.tokenNames; }
    public String getGrammarFileName() { return "api2mol.g"; }


    public static class mainRule_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "mainRule"
    // api2mol.g:19:1: mainRule returns [Node returnNode] : (contextSectionGen+= contextSection )? (defaultMetaclassSectionGen+= defaultMetaclassSection )? (mappingGen+= mapping )* ;
    public final api2molParser.mainRule_return mainRule() throws RecognitionException {
        api2molParser.mainRule_return retval = new api2molParser.mainRule_return();
        retval.start = input.LT(1);

        List list_contextSectionGen=null;
        List list_defaultMetaclassSectionGen=null;
        List list_mappingGen=null;
        RuleReturnScope contextSectionGen = null;
        RuleReturnScope defaultMetaclassSectionGen = null;
        RuleReturnScope mappingGen = null;
        try {
            // api2mol.g:20:1: ( (contextSectionGen+= contextSection )? (defaultMetaclassSectionGen+= defaultMetaclassSection )? (mappingGen+= mapping )* )
            // api2mol.g:20:4: (contextSectionGen+= contextSection )? (defaultMetaclassSectionGen+= defaultMetaclassSection )? (mappingGen+= mapping )*
            {
            // api2mol.g:20:21: (contextSectionGen+= contextSection )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==AT) ) {
                int LA1_1 = input.LA(2);

                if ( (LA1_1==CONTEXT) ) {
                    alt1=1;
                }
            }
            switch (alt1) {
                case 1 :
                    // api2mol.g:0:0: contextSectionGen+= contextSection
                    {
                    pushFollow(FOLLOW_contextSection_in_mainRule51);
                    contextSectionGen=contextSection();

                    state._fsp--;
                    if (state.failed) return retval;
                    if (list_contextSectionGen==null) list_contextSectionGen=new ArrayList();
                    list_contextSectionGen.add(contextSectionGen);


                    }
                    break;

            }

            // api2mol.g:20:66: (defaultMetaclassSectionGen+= defaultMetaclassSection )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==AT) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // api2mol.g:0:0: defaultMetaclassSectionGen+= defaultMetaclassSection
                    {
                    pushFollow(FOLLOW_defaultMetaclassSection_in_mainRule57);
                    defaultMetaclassSectionGen=defaultMetaclassSection();

                    state._fsp--;
                    if (state.failed) return retval;
                    if (list_defaultMetaclassSectionGen==null) list_defaultMetaclassSectionGen=new ArrayList();
                    list_defaultMetaclassSectionGen.add(defaultMetaclassSectionGen);


                    }
                    break;

            }

            // api2mol.g:20:104: (mappingGen+= mapping )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==ID||LA3_0==ENUM) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // api2mol.g:0:0: mappingGen+= mapping
            	    {
            	    pushFollow(FOLLOW_mapping_in_mainRule63);
            	    mappingGen=mapping();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if (list_mappingGen==null) list_mappingGen=new ArrayList();
            	    list_mappingGen.add(mappingGen);


            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            if ( state.backtracking==0 ) {

              		// Create return CST Node
              		Node mainRuleReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
              		mainRuleReturnNode.setKind("mainRule");
              	    // Create a CST Node
              		if(list_contextSectionGen != null) {
              	        for(Iterator it = list_contextSectionGen.iterator(); it.hasNext(); )  { 
              	            api2molParser.contextSection_return r = (api2molParser.contextSection_return) it.next(); 
              	            if(r != null && r.returnNode != null) {
              	            	r.returnNode.setKind("contextSection");
              	            	mainRuleReturnNode.getChildren().add(r.returnNode);
              	            } 
              	        }
              	    }
              	    // Create a CST Node
              		if(list_defaultMetaclassSectionGen != null) {
              	        for(Iterator it = list_defaultMetaclassSectionGen.iterator(); it.hasNext(); )  { 
              	            api2molParser.defaultMetaclassSection_return r = (api2molParser.defaultMetaclassSection_return) it.next(); 
              	            if(r != null && r.returnNode != null) {
              	            	r.returnNode.setKind("defaultMetaclassSection");
              	            	mainRuleReturnNode.getChildren().add(r.returnNode);
              	            } 
              	        }
              	    }
              	    // Create a CST Node
              		if(list_mappingGen != null) {
              	        for(Iterator it = list_mappingGen.iterator(); it.hasNext(); )  { 
              	            api2molParser.mapping_return r = (api2molParser.mapping_return) it.next(); 
              	            if(r != null && r.returnNode != null) {
              	            	r.returnNode.setKind("mapping");
              	            	mainRuleReturnNode.getChildren().add(r.returnNode);
              	            } 
              	        }
              	    }
              		// Returns the Node with CST Leaves/Nodes
              		retval.returnNode = mainRuleReturnNode;
              	
            }

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "mainRule"

    public static class contextSection_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "contextSection"
    // api2mol.g:60:1: contextSection returns [Node returnNode] : ATGen= AT CONTEXTGen= CONTEXT instanceNameGen+= instanceName (COMMAGen_List+= COMMA instanceNameGen_1+= instanceName )* SEMIGen= SEMI ;
    public final api2molParser.contextSection_return contextSection() throws RecognitionException {
        api2molParser.contextSection_return retval = new api2molParser.contextSection_return();
        retval.start = input.LT(1);

        Token ATGen=null;
        Token CONTEXTGen=null;
        Token SEMIGen=null;
        Token COMMAGen_List=null;
        List list_COMMAGen_List=null;
        List list_instanceNameGen=null;
        List list_instanceNameGen_1=null;
        RuleReturnScope instanceNameGen = null;
        RuleReturnScope instanceNameGen_1 = null;
        try {
            // api2mol.g:61:1: (ATGen= AT CONTEXTGen= CONTEXT instanceNameGen+= instanceName (COMMAGen_List+= COMMA instanceNameGen_1+= instanceName )* SEMIGen= SEMI )
            // api2mol.g:61:4: ATGen= AT CONTEXTGen= CONTEXT instanceNameGen+= instanceName (COMMAGen_List+= COMMA instanceNameGen_1+= instanceName )* SEMIGen= SEMI
            {
            ATGen=(Token)match(input,AT,FOLLOW_AT_in_contextSection87); if (state.failed) return retval;
            CONTEXTGen=(Token)match(input,CONTEXT,FOLLOW_CONTEXT_in_contextSection92); if (state.failed) return retval;
            pushFollow(FOLLOW_instanceName_in_contextSection97);
            instanceNameGen=instanceName();

            state._fsp--;
            if (state.failed) return retval;
            if (list_instanceNameGen==null) list_instanceNameGen=new ArrayList();
            list_instanceNameGen.add(instanceNameGen);

            // api2mol.g:61:64: (COMMAGen_List+= COMMA instanceNameGen_1+= instanceName )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==COMMA) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // api2mol.g:61:66: COMMAGen_List+= COMMA instanceNameGen_1+= instanceName
            	    {
            	    COMMAGen_List=(Token)match(input,COMMA,FOLLOW_COMMA_in_contextSection103); if (state.failed) return retval;
            	    if (list_COMMAGen_List==null) list_COMMAGen_List=new ArrayList();
            	    list_COMMAGen_List.add(COMMAGen_List);

            	    pushFollow(FOLLOW_instanceName_in_contextSection108);
            	    instanceNameGen_1=instanceName();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if (list_instanceNameGen_1==null) list_instanceNameGen_1=new ArrayList();
            	    list_instanceNameGen_1.add(instanceNameGen_1);


            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            SEMIGen=(Token)match(input,SEMI,FOLLOW_SEMI_in_contextSection115); if (state.failed) return retval;
            if ( state.backtracking==0 ) {

              		// Create return CST Node
              		Node contextSectionReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
              		contextSectionReturnNode.setKind("contextSection");
              	    // Create a CST Leaf
              		if(ATGen != null) {
              			Leaf ATGenLeaf = CSTFactoryImpl.eINSTANCE.createLeaf("AT", (ATGen!=null?ATGen.getText():null), ATGen.getCharPositionInLine(), ATGen.getLine());
              			contextSectionReturnNode.getChildren().add(ATGenLeaf);
              		}
              	    // Create a CST Leaf
              		if(CONTEXTGen != null) {
              			Leaf CONTEXTGenLeaf = CSTFactoryImpl.eINSTANCE.createLeaf("CONTEXT", (CONTEXTGen!=null?CONTEXTGen.getText():null), CONTEXTGen.getCharPositionInLine(), CONTEXTGen.getLine());
              			contextSectionReturnNode.getChildren().add(CONTEXTGenLeaf);
              		}
              	    // Create a CST Node
              		if(list_instanceNameGen != null) {
              	        for(Iterator it = list_instanceNameGen.iterator(); it.hasNext(); )  { 
              	            api2molParser.instanceName_return r = (api2molParser.instanceName_return) it.next(); 
              	            if(r != null && r.returnNode != null) {
              	            	r.returnNode.setKind("instanceName");
              	            	contextSectionReturnNode.getChildren().add(r.returnNode);
              	            } 
              	        }
              	    }

              		// Create a special CST Node for terminal COMMAGen_List aggregation
              		if(list_COMMAGen_List != null) {
              	    for(int pos = 0; pos < list_COMMAGen_List.size(); pos++ )  { 
              		// Terminal extractor
              	    if(list_COMMAGen_List != null) {
              		    Token t = (Token) list_COMMAGen_List.get(pos); 
              		    Leaf COMMAGen_ListLeaf = CSTFactoryImpl.eINSTANCE.createLeaf("COMMA", t.getText(), t.getCharPositionInLine(), t.getLine());
              			contextSectionReturnNode.getChildren().add(COMMAGen_ListLeaf);
              		}
              		// No Terminal extractor
              	    if(list_instanceNameGen_1 != null) {		
              	    	api2molParser.instanceName_return r = (api2molParser.instanceName_return) list_instanceNameGen_1.get(pos); 
              	    	if(r != null && r.returnNode != null) {
              	        	r.returnNode.setKind("instanceName");
              	    		contextSectionReturnNode.getChildren().add(r.returnNode);
              	    	} 
              		}
              		}
              		}

              	    // Create a CST Leaf
              		if(SEMIGen != null) {
              			Leaf SEMIGenLeaf = CSTFactoryImpl.eINSTANCE.createLeaf("SEMI", (SEMIGen!=null?SEMIGen.getText():null), SEMIGen.getCharPositionInLine(), SEMIGen.getLine());
              			contextSectionReturnNode.getChildren().add(SEMIGenLeaf);
              		}
              		// Returns the Node with CST Leaves/Nodes
              		retval.returnNode = contextSectionReturnNode;
              	
            }

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "contextSection"

    public static class defaultMetaclassSection_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "defaultMetaclassSection"
    // api2mol.g:117:1: defaultMetaclassSection returns [Node returnNode] : ATGen= AT DEFAULT_METACLASSGen= DEFAULT_METACLASS IDGen= ID LPARENGen= LPAREN IDGen_1= ID RPARENGen= RPAREN SEMIGen= SEMI ;
    public final api2molParser.defaultMetaclassSection_return defaultMetaclassSection() throws RecognitionException {
        api2molParser.defaultMetaclassSection_return retval = new api2molParser.defaultMetaclassSection_return();
        retval.start = input.LT(1);

        Token ATGen=null;
        Token DEFAULT_METACLASSGen=null;
        Token IDGen=null;
        Token LPARENGen=null;
        Token IDGen_1=null;
        Token RPARENGen=null;
        Token SEMIGen=null;

        try {
            // api2mol.g:118:1: (ATGen= AT DEFAULT_METACLASSGen= DEFAULT_METACLASS IDGen= ID LPARENGen= LPAREN IDGen_1= ID RPARENGen= RPAREN SEMIGen= SEMI )
            // api2mol.g:118:4: ATGen= AT DEFAULT_METACLASSGen= DEFAULT_METACLASS IDGen= ID LPARENGen= LPAREN IDGen_1= ID RPARENGen= RPAREN SEMIGen= SEMI
            {
            ATGen=(Token)match(input,AT,FOLLOW_AT_in_defaultMetaclassSection138); if (state.failed) return retval;
            DEFAULT_METACLASSGen=(Token)match(input,DEFAULT_METACLASS,FOLLOW_DEFAULT_METACLASS_in_defaultMetaclassSection143); if (state.failed) return retval;
            IDGen=(Token)match(input,ID,FOLLOW_ID_in_defaultMetaclassSection148); if (state.failed) return retval;
            LPARENGen=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_defaultMetaclassSection153); if (state.failed) return retval;
            IDGen_1=(Token)match(input,ID,FOLLOW_ID_in_defaultMetaclassSection158); if (state.failed) return retval;
            RPARENGen=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_defaultMetaclassSection163); if (state.failed) return retval;
            SEMIGen=(Token)match(input,SEMI,FOLLOW_SEMI_in_defaultMetaclassSection168); if (state.failed) return retval;
            if ( state.backtracking==0 ) {

              		// Create return CST Node
              		Node defaultMetaclassSectionReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
              		defaultMetaclassSectionReturnNode.setKind("defaultMetaclassSection");
              	    // Create a CST Leaf
              		if(ATGen != null) {
              			Leaf ATGenLeaf = CSTFactoryImpl.eINSTANCE.createLeaf("AT", (ATGen!=null?ATGen.getText():null), ATGen.getCharPositionInLine(), ATGen.getLine());
              			defaultMetaclassSectionReturnNode.getChildren().add(ATGenLeaf);
              		}
              	    // Create a CST Leaf
              		if(DEFAULT_METACLASSGen != null) {
              			Leaf DEFAULT_METACLASSGenLeaf = CSTFactoryImpl.eINSTANCE.createLeaf("DEFAULT_METACLASS", (DEFAULT_METACLASSGen!=null?DEFAULT_METACLASSGen.getText():null), DEFAULT_METACLASSGen.getCharPositionInLine(), DEFAULT_METACLASSGen.getLine());
              			defaultMetaclassSectionReturnNode.getChildren().add(DEFAULT_METACLASSGenLeaf);
              		}
              	    // Create a CST Leaf
              		if(IDGen != null) {
              			Leaf IDGenLeaf = CSTFactoryImpl.eINSTANCE.createLeaf("ID", (IDGen!=null?IDGen.getText():null), IDGen.getCharPositionInLine(), IDGen.getLine());
              			defaultMetaclassSectionReturnNode.getChildren().add(IDGenLeaf);
              		}
              	    // Create a CST Leaf
              		if(LPARENGen != null) {
              			Leaf LPARENGenLeaf = CSTFactoryImpl.eINSTANCE.createLeaf("LPAREN", (LPARENGen!=null?LPARENGen.getText():null), LPARENGen.getCharPositionInLine(), LPARENGen.getLine());
              			defaultMetaclassSectionReturnNode.getChildren().add(LPARENGenLeaf);
              		}
              	    // Create a CST Leaf
              		if(IDGen_1 != null) {
              			Leaf IDGen_1Leaf = CSTFactoryImpl.eINSTANCE.createLeaf("ID", (IDGen_1!=null?IDGen_1.getText():null), IDGen_1.getCharPositionInLine(), IDGen_1.getLine());
              			defaultMetaclassSectionReturnNode.getChildren().add(IDGen_1Leaf);
              		}
              	    // Create a CST Leaf
              		if(RPARENGen != null) {
              			Leaf RPARENGenLeaf = CSTFactoryImpl.eINSTANCE.createLeaf("RPAREN", (RPARENGen!=null?RPARENGen.getText():null), RPARENGen.getCharPositionInLine(), RPARENGen.getLine());
              			defaultMetaclassSectionReturnNode.getChildren().add(RPARENGenLeaf);
              		}
              	    // Create a CST Leaf
              		if(SEMIGen != null) {
              			Leaf SEMIGenLeaf = CSTFactoryImpl.eINSTANCE.createLeaf("SEMI", (SEMIGen!=null?SEMIGen.getText():null), SEMIGen.getCharPositionInLine(), SEMIGen.getLine());
              			defaultMetaclassSectionReturnNode.getChildren().add(SEMIGenLeaf);
              		}
              		// Returns the Node with CST Leaves/Nodes
              		retval.returnNode = defaultMetaclassSectionReturnNode;
              	
            }

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "defaultMetaclassSection"

    public static class mapping_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "mapping"
    // api2mol.g:163:1: mapping returns [Node returnNode] : (ENUMGen= ENUM )? metaclassNameGen+= metaclassName COLONGen= COLON instanceNameGen+= instanceName LCURLYGen= LCURLY (sectionGen+= section )* RCURLYGen= RCURLY ;
    public final api2molParser.mapping_return mapping() throws RecognitionException {
        api2molParser.mapping_return retval = new api2molParser.mapping_return();
        retval.start = input.LT(1);

        Token ENUMGen=null;
        Token COLONGen=null;
        Token LCURLYGen=null;
        Token RCURLYGen=null;
        List list_metaclassNameGen=null;
        List list_instanceNameGen=null;
        List list_sectionGen=null;
        RuleReturnScope metaclassNameGen = null;
        RuleReturnScope instanceNameGen = null;
        RuleReturnScope sectionGen = null;
        try {
            // api2mol.g:164:1: ( (ENUMGen= ENUM )? metaclassNameGen+= metaclassName COLONGen= COLON instanceNameGen+= instanceName LCURLYGen= LCURLY (sectionGen+= section )* RCURLYGen= RCURLY )
            // api2mol.g:164:3: (ENUMGen= ENUM )? metaclassNameGen+= metaclassName COLONGen= COLON instanceNameGen+= instanceName LCURLYGen= LCURLY (sectionGen+= section )* RCURLYGen= RCURLY
            {
            // api2mol.g:164:3: (ENUMGen= ENUM )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==ENUM) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // api2mol.g:164:5: ENUMGen= ENUM
                    {
                    ENUMGen=(Token)match(input,ENUM,FOLLOW_ENUM_in_mapping191); if (state.failed) return retval;

                    }
                    break;

            }

            pushFollow(FOLLOW_metaclassName_in_mapping198);
            metaclassNameGen=metaclassName();

            state._fsp--;
            if (state.failed) return retval;
            if (list_metaclassNameGen==null) list_metaclassNameGen=new ArrayList();
            list_metaclassNameGen.add(metaclassNameGen);

            COLONGen=(Token)match(input,COLON,FOLLOW_COLON_in_mapping203); if (state.failed) return retval;
            pushFollow(FOLLOW_instanceName_in_mapping208);
            instanceNameGen=instanceName();

            state._fsp--;
            if (state.failed) return retval;
            if (list_instanceNameGen==null) list_instanceNameGen=new ArrayList();
            list_instanceNameGen.add(instanceNameGen);

            LCURLYGen=(Token)match(input,LCURLY,FOLLOW_LCURLY_in_mapping213); if (state.failed) return retval;
            // api2mol.g:164:129: (sectionGen+= section )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==AT||LA6_0==ID) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // api2mol.g:0:0: sectionGen+= section
            	    {
            	    pushFollow(FOLLOW_section_in_mapping218);
            	    sectionGen=section();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if (list_sectionGen==null) list_sectionGen=new ArrayList();
            	    list_sectionGen.add(sectionGen);


            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);

            RCURLYGen=(Token)match(input,RCURLY,FOLLOW_RCURLY_in_mapping224); if (state.failed) return retval;
            if ( state.backtracking==0 ) {

              		// Create return CST Node
              		Node mappingReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
              		mappingReturnNode.setKind("mapping");
              	    // Create a CST Leaf
              		if(ENUMGen != null) {
              			Leaf ENUMGenLeaf = CSTFactoryImpl.eINSTANCE.createLeaf("ENUM", (ENUMGen!=null?ENUMGen.getText():null), ENUMGen.getCharPositionInLine(), ENUMGen.getLine());
              			mappingReturnNode.getChildren().add(ENUMGenLeaf);
              		}
              	    // Create a CST Node
              		if(list_metaclassNameGen != null) {
              	        for(Iterator it = list_metaclassNameGen.iterator(); it.hasNext(); )  { 
              	            api2molParser.metaclassName_return r = (api2molParser.metaclassName_return) it.next(); 
              	            if(r != null && r.returnNode != null) {
              	            	r.returnNode.setKind("metaclassName");
              	            	mappingReturnNode.getChildren().add(r.returnNode);
              	            } 
              	        }
              	    }
              	    // Create a CST Leaf
              		if(COLONGen != null) {
              			Leaf COLONGenLeaf = CSTFactoryImpl.eINSTANCE.createLeaf("COLON", (COLONGen!=null?COLONGen.getText():null), COLONGen.getCharPositionInLine(), COLONGen.getLine());
              			mappingReturnNode.getChildren().add(COLONGenLeaf);
              		}
              	    // Create a CST Node
              		if(list_instanceNameGen != null) {
              	        for(Iterator it = list_instanceNameGen.iterator(); it.hasNext(); )  { 
              	            api2molParser.instanceName_return r = (api2molParser.instanceName_return) it.next(); 
              	            if(r != null && r.returnNode != null) {
              	            	r.returnNode.setKind("instanceName");
              	            	mappingReturnNode.getChildren().add(r.returnNode);
              	            } 
              	        }
              	    }
              	    // Create a CST Leaf
              		if(LCURLYGen != null) {
              			Leaf LCURLYGenLeaf = CSTFactoryImpl.eINSTANCE.createLeaf("LCURLY", (LCURLYGen!=null?LCURLYGen.getText():null), LCURLYGen.getCharPositionInLine(), LCURLYGen.getLine());
              			mappingReturnNode.getChildren().add(LCURLYGenLeaf);
              		}
              	    // Create a CST Node
              		if(list_sectionGen != null) {
              	        for(Iterator it = list_sectionGen.iterator(); it.hasNext(); )  { 
              	            api2molParser.section_return r = (api2molParser.section_return) it.next(); 
              	            if(r != null && r.returnNode != null) {
              	            	r.returnNode.setKind("section");
              	            	mappingReturnNode.getChildren().add(r.returnNode);
              	            } 
              	        }
              	    }
              	    // Create a CST Leaf
              		if(RCURLYGen != null) {
              			Leaf RCURLYGenLeaf = CSTFactoryImpl.eINSTANCE.createLeaf("RCURLY", (RCURLYGen!=null?RCURLYGen.getText():null), RCURLYGen.getCharPositionInLine(), RCURLYGen.getLine());
              			mappingReturnNode.getChildren().add(RCURLYGenLeaf);
              		}
              		// Returns the Node with CST Leaves/Nodes
              		retval.returnNode = mappingReturnNode;
              	
            }

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "mapping"

    public static class metaclassName_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "metaclassName"
    // api2mol.g:224:1: metaclassName returns [Node returnNode] : IDGen= ID ;
    public final api2molParser.metaclassName_return metaclassName() throws RecognitionException {
        api2molParser.metaclassName_return retval = new api2molParser.metaclassName_return();
        retval.start = input.LT(1);

        Token IDGen=null;

        try {
            // api2mol.g:225:1: (IDGen= ID )
            // api2mol.g:225:4: IDGen= ID
            {
            IDGen=(Token)match(input,ID,FOLLOW_ID_in_metaclassName247); if (state.failed) return retval;
            if ( state.backtracking==0 ) {

              		// Create return CST Node
              		Node metaclassNameReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
              		metaclassNameReturnNode.setKind("metaclassName");
              	    // Create a CST Leaf
              		if(IDGen != null) {
              			Leaf IDGenLeaf = CSTFactoryImpl.eINSTANCE.createLeaf("ID", (IDGen!=null?IDGen.getText():null), IDGen.getCharPositionInLine(), IDGen.getLine());
              			metaclassNameReturnNode.getChildren().add(IDGenLeaf);
              		}
              		// Returns the Node with CST Leaves/Nodes
              		retval.returnNode = metaclassNameReturnNode;
              	
            }

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "metaclassName"

    public static class instanceName_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "instanceName"
    // api2mol.g:240:1: instanceName returns [Node returnNode] : IDGen= ID (DOTGen_List+= DOT IDGen_1_List+= ID )* ;
    public final api2molParser.instanceName_return instanceName() throws RecognitionException {
        api2molParser.instanceName_return retval = new api2molParser.instanceName_return();
        retval.start = input.LT(1);

        Token IDGen=null;
        Token DOTGen_List=null;
        Token IDGen_1_List=null;
        List list_DOTGen_List=null;
        List list_IDGen_1_List=null;

        try {
            // api2mol.g:241:1: (IDGen= ID (DOTGen_List+= DOT IDGen_1_List+= ID )* )
            // api2mol.g:241:4: IDGen= ID (DOTGen_List+= DOT IDGen_1_List+= ID )*
            {
            IDGen=(Token)match(input,ID,FOLLOW_ID_in_instanceName270); if (state.failed) return retval;
            // api2mol.g:241:13: (DOTGen_List+= DOT IDGen_1_List+= ID )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==DOT) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // api2mol.g:241:15: DOTGen_List+= DOT IDGen_1_List+= ID
            	    {
            	    DOTGen_List=(Token)match(input,DOT,FOLLOW_DOT_in_instanceName276); if (state.failed) return retval;
            	    if (list_DOTGen_List==null) list_DOTGen_List=new ArrayList();
            	    list_DOTGen_List.add(DOTGen_List);

            	    IDGen_1_List=(Token)match(input,ID,FOLLOW_ID_in_instanceName281); if (state.failed) return retval;
            	    if (list_IDGen_1_List==null) list_IDGen_1_List=new ArrayList();
            	    list_IDGen_1_List.add(IDGen_1_List);


            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);

            if ( state.backtracking==0 ) {
